# try_sqlx_mysql

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
migrations/: schema.sql  skip-tables
src/: main.rs
